// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file structure correct structure with relative paths: {"cwd":"test/","args":"fixtures/"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/","args":"fixtures/*"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/","args":"fixtures/*/*.txt"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/","args":"fixtures/subdir/subfile.txt"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"file.txt .dotfile"} 1`] = `
Array [
  "/.dotfile",
  "/file.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"file.txt obama.jpg"} 1`] = `
Array [
  "/file.txt",
  "/obama.jpg",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"file.txt subdir"} 1`] = `
Array [
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"file.txt"} 1`] = `
Array [
  "/file.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"obama.jpg"} 1`] = `
Array [
  "/obama.jpg",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures","args":"subdir/subfile.txt"} 1`] = `
Array [
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures/","args":"*"} 1`] = `
Array [
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure correct structure with relative paths: {"cwd":"test/fixtures/subdir","args":"../file.txt"} 1`] = `
Array [
  "/file.txt",
  "/test.zip",
]
`;
